Sat Jun  7 16:01:57 2014  Yutaka Kanemoto  <kanemoto@ruby-lang.org>

	* cont.c (rb_fiber_struct): keep context.uc_stack.ss_sp and context.uc_stack.ss_size
	  for later use. Patch by Rei Odaira. [ruby-core:62945] [Bug #9905]

Sat Jun  7 12:51:51 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (read_all): truncate the buffer before appending read data,
	  instead of truncating before reading.
	  [ruby-core:55951] [Bug #8625]

Sat Jun  7 12:28:53 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/digest/digest.c (rb_digest_instance_equal): no need to call
	  `to_s` twice.  [Bug #9913]

Sat Jun  7 11:35:01 2014  Tanaka Akira  <akr@fsij.org>

	* object.c (rb_mod_initialize_clone): Override Kernel#initialize_clone
	  to avoid an exception on Class.new.freeze.clone.to_s.
	  Reported by Andrew Grimm.  [ruby-core:41858] [Bug #5828]

Sat Jun  7 06:03:11 2014  Benoit Daloze  <eregontp@gmail.com>

	* ext/digest/digest.c (rb_digest_instance_equal):
	  fix #== for non-string arguments. [ruby-core:62967] [Bug #9913]

	* test/digest/test_digest.rb: add test for above.

Fri Jun  6 22:19:26 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (private_recv_p): check by node type, instead of a
	  magic number.

	* node.h (NODE_PRIVATE_RECV), parse.y (attrset_gen): remove

Fri Jun  6 17:07:08 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (iseq_compile_each), parse.y (new_attr_op_assign_gen):
	  allow op assign to a private attribute.
	  [ruby-core:62949] [Bug #9907]

Fri Jun  6 13:39:32 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (io_setstrbuf, io_read): should not shorten the given buffer until
	  read succeeds.  [ruby-core:55951] [Bug #8625]

Fri Jun  6 07:41:41 2014  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/visitors/yaml_tree.rb: dump empty symbols with a
	  tag so that they can be parsed on input. [Bug #9873] [ruby-core:62825]
	* test/psych/test_symbol.rb: test for change
