@@ -3407,13 +3407,12 @@ fix_rev(VALUE num)
 }
 
 static int
-bit_coerce(VALUE *x, VALUE *y, int err)
+bit_coerce(VALUE *x, VALUE *y)
 {
     if (!FIXNUM_P(*y) && !RB_TYPE_P(*y, T_BIGNUM)) {
-	do_coerce(x, y, err);
+	do_coerce(x, y, TRUE);
 	if (!FIXNUM_P(*x) && !RB_TYPE_P(*x, T_BIGNUM)
 	    && !FIXNUM_P(*y) && !RB_TYPE_P(*y, T_BIGNUM)) {
-	    if (!err) return FALSE;
 	    coerce_failed(*x, *y);
 	}
     }
@@ -3423,7 +3422,7 @@ bit_coerce(VALUE *x, VALUE *y, int err)
 VALUE
 rb_num_coerce_bit(VALUE x, VALUE y, ID func)
 {
-    bit_coerce(&x, &y, TRUE);
+    bit_coerce(&x, &y);
     return rb_funcall(x, func, 1, y);
 }
 
@@ -3446,7 +3445,7 @@ fix_and(VALUE x, VALUE y)
 	return rb_big_and(y, x);
     }
 
-    bit_coerce(&x, &y, TRUE);
+    bit_coerce(&x, &y);
     return rb_funcall(x, rb_intern("&"), 1, y);
 }
 
@@ -3469,7 +3468,7 @@ fix_or(VALUE x, VALUE y)
 	return rb_big_or(y, x);
     }
 
-    bit_coerce(&x, &y, TRUE);
+    bit_coerce(&x, &y);
     return rb_funcall(x, rb_intern("|"), 1, y);
 }
 
@@ -3492,7 +3491,7 @@ fix_xor(VALUE x, VALUE y)
 	return rb_big_xor(y, x);
     }
 
-    bit_coerce(&x, &y, TRUE);
+    bit_coerce(&x, &y);
     return rb_funcall(x, rb_intern("^"), 1, y);
 }
 
